# design-patterns-cpp

./: CMakeLists.txt  README.md
modules/: CMakeLists.txt
object_pool/: ObjectPool.hpp  properties.cpp  properties.h
test/: main.cpp
tests/: CMakeLists.txt  auto_singleton.cpp  main.cpp  object_pool.cpp  thread_pool.cpp
thread_pool/: ThreadPool.cpp  ThreadPool.hpp  properties.cpp  properties.hpp
thread_pool/pool_manager/: PoolManager.cpp  PoolManager.hpp  PoolRequest.cpp  PoolRequest.hpp
